# RED-ANNS

./: CMakeLists.txt
app/: deep10M_query10k_K4.json  deep10M_query10k_local.json  deep10M_query10k_local_method2.json
core/: rdma.hpp
experiments/: .gitignore  README_SETUP.md  config.sh  generate_dummy_logs.py  make_tmp_json.py  parse_logs.py  plot_all.py  run_all.sh  run_fig10.sh  run_fig11.sh  run_fig14.sh  run_fig16a.sh  run_fig16b.sh
experiments/setup/: phase1_collect_info.sh  phase2_ssh_setup.sh  phase3_install_rdma.sh  phase4_install_deps.sh  phase5_build_and_setup.sh  phase6_test_rdma.sh  run_on_all_nodes.sh
include/: index.h
scripts/: build_vamana_graph.py  deep10M_external_builder_guide.md  method2_prepare_deep10M.sh  prepare_redanns_full_deep10M.sh  sync_deep10M_nodes.sh  vamana_local_builder.sh
tests/: test_search_single_node.cpp
